refactor click handling